--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/title.png" />
+    <link rel="shortcut icon" href="/title.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1A73E8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/title.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/title.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>A.R.M.Y</title>
     <link
